--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 #Mysql
 Mysql.driver=com.mysql.jdbc.Driver
-Mysql.url=jdbc:mysql://localhost:3306/www_db?useUnicode=true&amp;characterEncoding=utf8
+Mysql.url=jdbc:mysql://localhost:3306/www_db?useUnicode=true&characterEncoding=utf8
 Mysql.username=root
 Mysql.password=123
 Mysql.acquireIncrement=5
